# my-aleo

./: go.mod  go.sum
account/: account.go  account_test.go  aleo.go  privatekey.go  privatekey_test.go
aleo/: Cargo.toml
aleo/src/: main.rs
aleo/src/account/: account.rs
aleo/src/c_error/: mod.rs
bip39/: bip39.go  bip39_test.go
