[package]
name = "aleo"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.159"
env_logger = "0.11.5"
log = "0.4.14"
sha2 = "0.10.8"

[lib]
crate-type = ["cdylib"]

[dependencies.snarkvm-console]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "mainnet"
default-features = true

#[dependencies.snarkvm-algorithms]
#git = "https://github.com/AleoHQ/snarkVM.git"
#branch = "mainnet"
#default-features = true

#[dependencies.snarkvm-utilities]
#git = "https://github.com/AleoHQ/snarkVM.git"
#branch = "mainnet"
#default-features = true

[dependencies.hex]
version = "0.4.3"

[dependencies.rand]
version = "0.8"
default-features = false
features = [ "std_rng" ]

[dependencies.rand_chacha]
version = "0.3"




